--- a/css/list.css
+++ b/css/list.css
@@ -1,3 +1,103 @@
-body{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/*
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
     background-color: antiquewhite;
+}
+
+form {
+    position: relative;
+    background-color: aquamarine;
+    width: 350px;
+}
+
+ul {
+    list-style: none;
+}
+
+ul li input {
+    visibility: hidden;
+    appearance: none;
+}
+
+span {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+}
+*/
+
+/*form search bar*/
+input[type="text"] {
+    
+    font: 16px system-ui;
+    height: 100%;
+    width: 100%;
+    padding: 6px 10px;
+}
+
+::placeholder {
+    color: #045DE9;
+    opacity: 0.7; 
+  }
+ 
+  
+
+/*form buttons*/
+.save {
+    padding: 0.25em 0.75em;
+    /*em units are used to allow the padding to proportionally resize with the applied font-size*/
+    min-width: 18ch;
+    /*ch unit are used since they equal to the width of the first character of the applied font and font-size*/
+    min-height: 45px;
+    /*min-height to ensure that the button is a large enough target on touch devices*/
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    background: linear-gradient(to right, #09C6F9, #045DE9);
+    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
+}
+
+.cancel {
+    padding: 0.25em 0.75em;
+    /*em units are used to allow the padding to proportionally resize with the applied font-size*/
+    min-width: 18ch;
+    /*ch unit are used since they equal to the width of the first character of the applied font and font-size*/
+    min-height: 45px;
+    /*min-height to ensure that the button is a large enough target on touch devices*/
+    cursor: pointer;
+    border: 1px solid rgb(184, 184, 184);
+    border-radius: 5px;
+    color: rgb(184, 184, 184);
+    background-color: white;
+    box-shadow: 0px 2px 3px 0px rgba(147, 145, 145, 0.5);
+}
+
+button:hover {
+    transition: 0.5s;
+    transform: translateY(5px);
+    box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+}
+
+button:focus {
+    /*for keyboard interactions*/
+    outline-color: transparent;
+    outline-style: solid;
+    box-shadow: 0 0 0 2px grey;
+}
+
+button:active {
+    opacity: 0.5;
 }
