--- a/css/list.css
+++ b/css/list.css
@@ -1,103 +1,222 @@
+:root {
+    --grey-shade: rgb(119, 118, 118);
+    --light-grey-shade: rgb(223, 221, 221);
+    --green-tick: #4CBB17;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/*
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: antiquewhite;
-}
-
-form {
-    position: relative;
-    background-color: aquamarine;
-    width: 350px;
-}
-
-ul {
-    list-style: none;
-}
-
-ul li input {
-    visibility: hidden;
-    appearance: none;
-}
-
-span {
-    position: relative;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #ccc;
-    border-radius: 50%;
-}
-*/
-
-/*form search bar*/
-input[type="text"] {
-    
-    font: 16px system-ui;
+html {
     height: 100%;
     width: 100%;
-    padding: 6px 10px;
+}
+
+body {
+    /*the body acts like a main flex container*/
+    display: flex;
+    flex-direction: column;
+    font-family: 'Trebuchet MS', sans-serif;
+    height: 100%;
+    width: 100%;
+}
+
+
+/******************************************************************/
+/*styling the header*/
+header {
+    flex: 1 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+}
+
+header h1 {
+    font-weight: 200;
+}
+
+
+/******************************************************************/
+/*styling the form*/
+form {
+    flex: 5 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+button,
+input,
+label {
+    cursor: pointer;
+}
+
+/******************************************************************/
+/*form search bar*/
+.search-container {
+    position: relative;
+    min-width: 400px;
+}
+
+input[type="search"] {
+    border: none;
+    border-bottom: 1px solid var(--light-grey-shade);
+    height: 30px;
+    width: 100%;
+    padding: 2px 10px 2px 35px;
+    font-size: 13px;
+}
+
+.fa-search {
+    position: absolute;
+    top: 6px;
+    left: 8px;
+    color: var(--grey-shade);
 }
 
 ::placeholder {
-    color: #045DE9;
-    opacity: 0.7; 
-  }
- 
-  
+    color: var(--grey-shade);
+    opacity: 0.8;
+}
 
+
+/******************************************************************/
+/*form checkboxes*/
+.checkboxes-container {
+    width: 400px;
+    margin: 20px 0px;
+    border: none;
+}
+
+.checkboxes-container legend {
+    display: none;
+}
+
+.checkboxes-container ul {
+    list-style: none;
+    color: var(--grey-shade);
+}
+
+.checkboxes-container ul li {
+    height: 45px;
+    border: 1px solid var(--light-grey-shade);
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 15px;
+    margin: 8px 0px;
+}
+
+.checkboxes-container ul li .fa-user {
+    margin-right: 12px;
+    /* Add space between icon and label */
+}
+
+.checkboxes-container ul li label {
+    flex-grow: 1;
+    /* Allow label to grow and take remaining space */
+    font-size: 13px;
+}
+
+.checkboxes-container ul li label {
+    color: black;
+}
+
+.checkboxes-container ul li input[type="checkbox"] {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1.5px solid var(--light-grey-shade);
+    background-color: #fff;
+    /*for the green tick icon*/
+    text-align: center;
+    font-weight: 600;
+    color: var(--green-tick);
+}
+
+.checkboxes-container ul li input[type="checkbox"]:checked {
+    border: 1.5px solid var(--green-tick);
+}
+
+.checkboxes-container ul li input[type="checkbox"]:checked::before {
+    content: "✔";
+}
+
+
+/******************************************************************/
 /*form buttons*/
-.save {
-    padding: 0.25em 0.75em;
-    /*em units are used to allow the padding to proportionally resize with the applied font-size*/
-    min-width: 18ch;
-    /*ch unit are used since they equal to the width of the first character of the applied font and font-size*/
-    min-height: 45px;
-    /*min-height to ensure that the button is a large enough target on touch devices*/
-    cursor: pointer;
+.buttons-container {
+    display: grid;
+    grid-template-columns: repeat(2, 8em);
+    grid-template-rows: 40px;
+    gap: 30px;
+}
+
+.buttons-container .save {
     border: none;
     border-radius: 5px;
     color: white;
     background: linear-gradient(to right, #09C6F9, #045DE9);
-    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 2px 3px 0px var(--grey-shade);
 }
 
-.cancel {
-    padding: 0.25em 0.75em;
-    /*em units are used to allow the padding to proportionally resize with the applied font-size*/
-    min-width: 18ch;
-    /*ch unit are used since they equal to the width of the first character of the applied font and font-size*/
-    min-height: 45px;
-    /*min-height to ensure that the button is a large enough target on touch devices*/
-    cursor: pointer;
-    border: 1px solid rgb(184, 184, 184);
+.buttons-container .cancel {
+    border: 1px solid var(--light-grey-shade);
     border-radius: 5px;
-    color: rgb(184, 184, 184);
+    color: var(--grey-shade);
     background-color: white;
-    box-shadow: 0px 2px 3px 0px rgba(147, 145, 145, 0.5);
 }
 
-button:hover {
-    transition: 0.5s;
-    transform: translateY(5px);
-    box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+.buttons-container button:hover {
+    transition: 0.7s;
+    transform: translateY(7px);
+    box-shadow: 0px 10px 20px 2px var(--grey-shade);
 }
 
-button:focus {
+.buttons-container button:focus {
     /*for keyboard interactions*/
-    outline-color: transparent;
-    outline-style: solid;
-    box-shadow: 0 0 0 2px grey;
+    border: 4px solid black;
 }
 
-button:active {
-    opacity: 0.5;
-}
+
+/******************************************************************/
+/*media queries*/
+@media (max-width: 500px) {}
+
+/*
+@media all and (min-width: 800px) {
+    article {
+      width: 66%;
+      float: left;
+    }
+    
+    aside {
+      width: 33%;
+      float: right;
+    }
+  }
+  
+  @media all and (min-width: 1600px) {
+    h1 {
+      width: 22.5%;
+      float: left;
+    }
+    
+    article {
+      width: 50%;
+      float: left;
+    }
+    
+    aside {
+      width: 22.5%;
+      float: right;
+    }
+  }
+*/
