--- a/css/list.css
+++ b/css/list.css
@@ -16,12 +16,13 @@ html {
 }
 
 body {
-    /*the body acts like a main flex container*/
     display: flex;
     flex-direction: column;
+    align-items: center;
     font-family: 'Trebuchet MS', sans-serif;
     height: 100%;
     width: 100%;
+    font-size: 10px;
 }
 
 
@@ -32,11 +33,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 12px;
-}
-
-header h1 {
-    font-weight: 200;
+    font-size: 1.2em;
 }
 
 
@@ -47,6 +44,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 400px;
 }
 
 button,
@@ -59,35 +57,37 @@ label {
 /*form search bar*/
 .search-container {
     position: relative;
-    min-width: 400px;
+    font-size: 1.4em;
+    width: 100%;
 }
 
-input[type="search"] {
+.search-container input[type="search"] {
     border: none;
     border-bottom: 1px solid var(--light-grey-shade);
-    height: 30px;
+    min-height: 2.4em;
     width: 100%;
-    padding: 2px 10px 2px 35px;
-    font-size: 13px;
+    padding-inline-start: 35px;
+    padding-inline-end: 10px;
+    font-size: 1em;
 }
 
-.fa-search {
-    position: absolute;
-    top: 6px;
-    left: 8px;
-    color: var(--grey-shade);
-}
-
-::placeholder {
+.search-container input[type="search"]::placeholder {
     color: var(--grey-shade);
     opacity: 0.8;
+}
+
+.search-container .fa-search {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    color: var(--grey-shade);
 }
 
 
 /******************************************************************/
 /*form checkboxes*/
 .checkboxes-container {
-    width: 400px;
+    width: 100%;
     margin: 20px 0px;
     border: none;
 }
@@ -102,7 +102,7 @@ input[type="search"] {
 }
 
 .checkboxes-container ul li {
-    height: 45px;
+    min-height: 3.5em;
     border: 1px solid var(--light-grey-shade);
     border-radius: 3px;
     display: flex;
@@ -110,6 +110,7 @@ input[type="search"] {
     justify-content: space-between;
     padding: 0 15px;
     margin: 8px 0px;
+    font-size: 1.3em;
 }
 
 .checkboxes-container ul li .fa-user {
@@ -120,11 +121,6 @@ input[type="search"] {
 .checkboxes-container ul li label {
     flex-grow: 1;
     /* Allow label to grow and take remaining space */
-    font-size: 13px;
-}
-
-.checkboxes-container ul li label {
-    color: black;
 }
 
 .checkboxes-container ul li input[type="checkbox"] {
@@ -154,8 +150,8 @@ input[type="search"] {
 /*form buttons*/
 .buttons-container {
     display: grid;
-    grid-template-columns: repeat(2, 8em);
-    grid-template-rows: 40px;
+    grid-template-columns: repeat(2, 12em);
+    grid-template-rows: 4em;
     gap: 30px;
 }
 
@@ -165,6 +161,7 @@ input[type="search"] {
     color: white;
     background: linear-gradient(to right, #09C6F9, #045DE9);
     box-shadow: 0px 2px 3px 0px var(--grey-shade);
+    font-size: 1.2em;
 }
 
 .buttons-container .cancel {
@@ -172,6 +169,7 @@ input[type="search"] {
     border-radius: 5px;
     color: var(--grey-shade);
     background-color: white;
+    font-size: 1.2em;
 }
 
 .buttons-container button:hover {
@@ -188,35 +186,13 @@ input[type="search"] {
 
 /******************************************************************/
 /*media queries*/
-@media (max-width: 500px) {}
+@media (max-width: 600px) {
+    body {
+        font-size: 8px;
+    }
 
-/*
-@media all and (min-width: 800px) {
-    article {
-      width: 66%;
-      float: left;
+    form {
+        width: 300px;
+        ;
     }
-    
-    aside {
-      width: 33%;
-      float: right;
-    }
-  }
-  
-  @media all and (min-width: 1600px) {
-    h1 {
-      width: 22.5%;
-      float: left;
-    }
-    
-    article {
-      width: 50%;
-      float: left;
-    }
-    
-    aside {
-      width: 22.5%;
-      float: right;
-    }
-  }
-*/
+}
